# shiv-lal-manpower

./: .env.prod.example  .gitignore  CD_README.md  CI_README.md  README.md  docker-compose.prod.yml  docker-compose.yml  new.csv  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  celerybeat-schedule  pyproject.toml
backend/apps/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_password_changed_at.py
backend/apps/attendance/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/common/: models.py  permissions.py  utils.py
backend/apps/compliance/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/dashboard/: urls.py  views.py
backend/apps/deployment/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/employees/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/leaves/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/notifications/: models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/payroll/: admin.py  apps.py  models.py  pdf_service.py  serializers.py  services.py  urls.py  views.py
backend/apps/recruitment/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/reports/: urls.py  views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/requirements/: base.txt  dev.txt  prod.txt
(+97 files in other folders)
