[project]
name = "shiv-lal-manpower"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "django-filter>=23.5",
    "psycopg2-binary>=2.9",
    "celery>=5.3",
    "redis>=5.0",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "Pillow>=10.0",
    "gunicorn>=21.0",
    "uvicorn[standard]>=0.27",
    "python-decouple>=3.8",
    "django-celery-beat>=2.6",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.3",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
]
prod = [
    "django-storages[s3]>=1.14",
    "sentry-sdk>=1.40",
]

[tool.uv]
package = false
